# proofbundle

./: .gitignore  000_PUBLICATION_CONTROL_20260516.md  2026-04-19_proofbundle_ui_genesis.html  2026-04-20_proofbundle_ui_v1.2.1.html  ARCHIVE_MANIFEST_SCOPE.md  BINARY_ARTIFACTS_PENDING_GIT_AUTH.md  CHANGELOG.md  CNAME  CNAME.superseded_20260517T051634Z.md  COMMANDS_RUN.md  CONTRIBUTING.md  ENVIRONMENT.md  GITHUB_CURRENT_STATE_INDEX_20260515T0339PDT.md  LICENSE  LICENSE-MIT  PROOFBRIDGE.md  PUBLICATION_PACKET_20260516.md  PUBLIC_BOUNDARY_SUPERSESSION_20260517.json  PUBLIC_PROOFBUNDLE_MANIFEST_20260516.json  README.md  RELEASE_BOUNDARY.md  REPAIR_LEDGER.md  REPO_READINESS_20260516.md  SECURITY.md  SPEC.md  STATUS.md  archive_manifest_full.json  compute_manifest.py  false_theorem_scan_latest.json  index.html  manifest.json  repo_summary.txt  status.json
app_wrappers/: README_APP_BUILDERS.md
cli/: Cargo.toml
cli/src/: boundary.rs  canonical.rs  digest.rs  lib.rs  lineage.rs  main.rs  seal.rs  signature.rs  verify.rs
cli/src/commands/: conformance.rs  inspect.rs  key.rs  lineage.rs  mod.rs  seal.rs  verify.rs
cloudshell/: gcloud_ollama_cloudshell_auto_project_now_20260511.sh  gcloud_ollama_scout_cloudshell_now_20260511.sh
conformance/: CONFORMANCE_STATUS.md  PYTHON_CONFORMANCE_STATUS_20260516.md  README.md  cross_impl_results.json  py_test_output_300_300_20260516T0720Z.txt  typescript_test_output_20260516T1336Z.txt  vectors.generated.json  vectors_v1.json
core/: package-lock.json  package.json  test_vector_sample.js  test_vectors.js  tsconfig.json
go/: boundary.go  (+9 more)
(+249 files in other folders)
